2013-07-30  Basic  <simsong@ncr.nps.edu>

	* src/be13_api/plugin.cpp (info_scanners): now only prints -H info if it is provided by the scanner.
2013-07-29  Man Page  <simsong@mncrnpsedu.local>

	* src/scan_zip.cpp (scan_zip_component): now records general_purpose_bit_flags in XML. Bit 1 indicates that a component is encrypted
	(scan_zip_component): removed max_depth check; it's in plugin system

2013-07-26  Simson Garfinkel  <simsong@Mucha.local>

	* src/scan_net.cpp (scan_net): the -S variable carve_tcp is now implemented by the scan_net scanner to enable or disable TCP/IP memory structure carving. It is disabled by default.

2013-07-17  Basic  <simsong@sg1.ncr.nps.edu>

	* src/scan_windirs.cpp (scan_windirs): windirs now only runs at top level

	* src/scan_zip.cpp (scan_zip_component): now prints mtime in ISO8601 format
	(scan_zip_component): (previously mtime and ctime were wrong parts)

2013-07-16  Man Page  <simsong@mncrnpsedu.local>

	* src/scan_xor.cpp (scan_xor): will not XOR on either side of a ZIP. improved error handling

	* tests/regress.py: updated numbers for 1.4 release

2013-07-14  Basic  <simsong@Mucha.local>

	* configure.ac: updated to beta4

2013-07-11  Basic  <simsong@Mucha.local>

	* configure.ac: updated to beta3

	* src/scan_exif.cpp: fixed jpeg validation. carving now works.

2013-07-09  Simson Garfinkel  <simsong@sg1.ncr.nps.edu>

	* src/be13_api/plugin.cpp (GET_CONFIG): fixed bug in handling of uint8_t config values. They weren't getting set properly.. Ugh.

	* src/scan_xor.cpp (scan_xor): fixed error when XOR mask was specified as 0. Previously it recused; now it does not.

2013-07-02  Simson Garfinkel  <simsong@Mucha.local>

	* configure.ac: removed defines we aren't using anymore

2013-06-27  Basic  <simsong@Mucha.local>

	* src/be13_api/feature_recorder.h (class feature_recorder): as a result of popular demand, the UTF8 BOM and BOM EXPLAINATION have been removed from the feature files

2013-06-26  Basic  <simsong@Mucha.local>
