@@ -10,6 +10,9 @@
 #include <iomanip>
 #include <cassert>
 
+#define ZIP_RECORDER_NAME "zip"
+#define UNZIP_RECORDER_NAME "unzip_carved"
+
 // these are not tunable
 static uint32_t  zip_max_uncompr_size = 256*1024*1024; // don't decompress objects larger than this
 static uint32_t  zip_min_uncompr_size = 6;	// don't bother with objects smaller than this
@@ -124,6 +127,7 @@ inline void scan_zip_component(const class scanner_params &sp,const recursion_co
     if(name.size()==0) name="<NONAME>"; // we want at least something
 
     /* Save details of the zip header */
+    std::string mtime = fatDateToISODate(lastmoddate,lastmodtime);
     char b2[1024];
     snprintf(b2,sizeof(b2),
              "<zipinfo><name>%s</name>"
@@ -131,8 +135,9 @@ inline void scan_zip_component(const class scanner_params &sp,const recursion_co
              "<uncompr_size>%d</uncompr_size><compr_size>%d</compr_size>"
              "<mtime>%s</mtime><crc32>%u</crc32>"
              "<extra_field_len>%d</extra_field_len>",
-             name.c_str(),version_needed_to_extract,general_purpose_bit_flag,compression_method,uncompr_size,compr_size,
-             fatDateToISODate(lastmoddate,lastmodtime).c_str(),
+             name.c_str(),version_needed_to_extract,
+             general_purpose_bit_flag,compression_method,uncompr_size,compr_size,
+             mtime.c_str(),
              crc32,extra_field_len);
     stringstream xmlstream;
     xmlstream << b2;
@@ -200,19 +205,18 @@ inline void scan_zip_component(const class scanner_params &sp,const recursion_co
 
                 scanner_params spnew(sp,sbuf_new); // scanner_params that points to the sbuf
                 (*rcb.callback)(spnew);            // process the sbuf
-            }
-            /* If we are carving, then carve.  Use the original sbuf
-             * name (so we don't have ZIP on everything) and change
-             * slashes to spaces in the filename
-             */
-            if(zs.total_out > 0 && unzip_recorder){
-                std::string carve_name("_"); // begin with a _
-                for(std::string::const_iterator it = name.begin(); it!=name.end();it++){
-                    carve_name.push_back(*it=='/' ? '_' : *it);
-                }
 
-                const sbuf_t sbuf_unzip(pos0+pos, dbuf.buf,zs.total_out,zs.total_out,false); // sbuf w/ decompressed data
-                unzip_recorder->carve(sbuf_unzip,0,zs.total_out,carve_name,hasher);
+                /* If we are carving, then carve; and change to
+                 * underbars in the filename.
+                 */
+                if(unzip_recorder){
+                    std::string carve_name("_"); // begin with a _
+                    for(std::string::const_iterator it = name.begin(); it!=name.end();it++){
+                        carve_name.push_back(*it=='/' ? '_' : *it);
+                    }
+                    std::string fn = unzip_recorder->carve(sbuf_new,0,sbuf_new.bufsize,carve_name,hasher);
+                    unzip_recorder->set_carve_mtime(fn,mtime);
+                }
             }
             r = inflateEnd(&zs);
         } else {
@@ -234,25 +238,26 @@ void scan_zip(const class scanner_params &sp,const recursion_control_block &rcb)
         sp.info->get_config("zip_min_uncompr_size",&zip_min_uncompr_size,"Minimum size of a ZIP uncompressed object");
         sp.info->get_config("zip_max_uncompr_size",&zip_max_uncompr_size,"Maximum size of a ZIP uncompressed object");
         sp.info->get_config("zip_name_len_max",&zip_name_len_max,"Maximum name of a ZIP component filename");
-        sp.info->get_config("unzip_carve_mode",&unzip_carve_mode,"0=carve none; 1=carve encoded; 2=carve all");
-	sp.info->feature_names.insert("zip");
+        sp.info->get_config("unzip_carve_mode",&unzip_carve_mode,CARVE_MODE_DESCRIPTION);
+	sp.info->feature_names.insert(ZIP_RECORDER_NAME);
         if(unzip_carve_mode){
-            sp.info->feature_names.insert("unzip");
+            sp.info->feature_names.insert(UNZIP_RECORDER_NAME);
         }
         hasher    = sp.info->config->hasher;
 	return;
     }
     if(sp.phase==scanner_params::PHASE_INIT && unzip_carve_mode!=feature_recorder::CARVE_NONE){
-	feature_recorder *unzip_recorder = sp.fs.get_name("unzip");
+	feature_recorder *unzip_recorder = sp.fs.get_name(UNZIP_RECORDER_NAME);
         unzip_recorder->set_carve_mode(static_cast<feature_recorder::carve_mode_t>(unzip_carve_mode));
+        unzip_recorder->set_carve_ignore_encoding("ZIP");
     }
     if(sp.phase==scanner_params::PHASE_SCAN){
 	const sbuf_t &sbuf = sp.sbuf;
 
         if(sbuf.bufsize < MIN_ZIP_SIZE) return;
 
-	feature_recorder *zip_recorder = sp.fs.get_name("zip");
-        feature_recorder *unzip_recorder = unzip_carve_mode ? sp.fs.get_name("unzip") : 0;
+	feature_recorder *zip_recorder = sp.fs.get_name(ZIP_RECORDER_NAME);
+        feature_recorder *unzip_recorder = unzip_carve_mode ? sp.fs.get_name(UNZIP_RECORDER_NAME) : 0;
 	zip_recorder->set_flag(feature_recorder::FLAG_XML); // because we are sending through XML
 	for(size_t i=0 ; i < sbuf.pagesize && i < sbuf.bufsize-MIN_ZIP_SIZE; i++){
 	    /** Look for signature for beginning of a ZIP component. */
